--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                    <p><i class="fas fa-paper-plane"></i>kajackpiper@gmail.com</p>
                    <p><i class="fas fa-phone-square-alt"></i>+254713286220</p>
                    <div class="social-icons">
-                       <a href=""><i class="fab fa-facebook"></i></a>
-                       <a href=""><i class="fab fa-twitter-square"></i></a>
-                       <a href=""><i class="fab fa-instagram"></i></a>
-                       <a href=""><i class="fab fa-linkedin"></i></a>
+                       <a href="https://web.facebook.com/nerds.kenya"><i class="fab fa-facebook"></i></a>
+                       <a href="https://twitter.com/KajackP"><i class="fab fa-twitter-square"></i></a>
+                       <a href="https://www.instagram.com/jacksonjayvel/"><i class="fab fa-instagram"></i></a>
+                       <a href="https://www.linkedin.com/in/jackson-kairani-b87410b5/"><i class="fab fa-linkedin"></i></a>
                    </div>
                    <a href="images/Jack Resume.pdf" download class="btn btn2">Download CV</a>
                </div>
