--- a/index.html
+++ b/index.html
@@ -52,14 +52,12 @@
                          <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
                          <li><span>Web Development</span><br>Web App Development</li>
                          <li><span>App Development</span><br>Building Android/IOS Apps</li>
-                         <li><span>BlockChain Development</span><br>Designing Smart Contracts</li>
                      </ul>
                  </div>
                  <div class="tab-contents" id="experience">
                      <ul>
-                         <li><span>2021 - Current</span><br> Blockchain Development at KaJack 
-                         Piper<br> UI/UX Design at KaJack Piper<br> Full Stack Website Developer at 
-                         KaJack Piper</li>
+                         <li><span>2021 - Current</span><br> Computer Engineer at Upsetter <br> 
+                         Full Stack Website Developer at KaJack Piper</li>
                          <li><span>2019 - 2021</span><br>Google Analytics And Database Analysis at 
                          Civil Engineering Solutions Company Limited</li>
                          <li><span>2016 - 2017</span><br>Internship at Sketchman Limited</li>
@@ -69,7 +67,7 @@
                      <ul>
                          <li><span>2016</span><br>UI/UX Design Training at FreeCodeAcademy</li>
                          <li><span>2018</span><br>Programming from Solo Learn</li>
-                         <li><span>2019</span><br>Computer Science from Havard University</li>
+                         <li><span>2019</span><br>Computer Science from CS50 Havard University</li>
                      </ul>
                  </div>
              </div>
@@ -108,14 +106,6 @@
                    navigation programs.</p>
                     <a href="#">Learn More</a>
                </div>
-               <div>
-                   <i class="fab fa-ethereum"></i>
-                   <h2>Smart Contracts</h2>
-                   <p>Being proficient in both Solidity and Etherium, at KaJack Piper, I examine if any inputs are 
-                   impacting the execution feasibility and identifying the limitation(s) of the underlying blockchain  
-                   platform. I also define the data elements and set conditions of execution per the business logic.</p>
-                    <a href="#">Learn More</a>
-               </div>
            </div>
        </div>
    </div>
@@ -140,16 +130,6 @@
                         <h3>Civil Engineering Website</h3>
                         <p>Official Ecommerce Website for Civil Engineering Solutions
                         Company Limited so that clients can get easy access to products.</p>
-                        <a href="#"><i class="fa fa-external-link"></i></a>
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="images/work-3.png" width="350px" height="450px">
-                    <div class="layer">
-                        <h3>Andrew Kibe Show Website</h3>
-                        <p>Official Podcast Website for the Andrew Kibe Show  
-                        with tools like audio pieces that client can efficiently 
-                        listen to the show's podcast.</p>
                         <a href="#"><i class="fa fa-external-link"></i></a>
                     </div>
                 </div>
